@@ -56,3 +56,5 @@ libhidups      0x0003      0x050d   0x0375    0x0000       0x0000       0x00    
 libhidups      0x0003      0x050d   0x1100    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Kebo
 libhidups      0x0003      0x0925   0x1234    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+# Hewlett Packard
+libhidups      0x0003      0x03f0   0x1f0a    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
